# vibe-coding

./: .gitignore  LICENSE  README.md  architecture.md  index.html  package-lock.json  package.json  quickstart.md
server/: app.py  pyproject.toml  requirements.txt  run_server.py  setup.py
src/: App.css  App.tsx
src/components/: DocumentEditor.tsx  DocumentList.tsx  GoogleDocEditor.tsx
